# OC-Projet-7-

./: .gitignore  .slugignore  Aptfile  Procfile  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci-cd.yml  main.yml
.streamlit/: config.toml
api/: 2025-01-17 - RobustScaler.joblib  local_main.py  main.py  mlflow_fail_main.py  mlflow_main.py  streamlit_test.py
api/endpoints/: client_routes.py  feature_importance_routes.py  positioning_routes.py  prediction_routes.py
api/models/: model_pipeline.joblib  shap_explainer.joblib
api/utils/: database_utils.py  model_pipeline.py
assets/models/: 2025-01-17 - LGBMClassifier - business.joblib
assets/models/unused/: 2025-01-14 - LGBMClassifier - business.joblib
assets/notes/: api_summary.md  dashboad_diagram.mmd  dashboard_diagram.puml  mlflow_doc.md  p7_presentation.pptx  streamlit.md  todo_list.md
dashboard/: streamlit_app.py
data/processed/: models_eval_results_2025-01-17.csv  prediction_df_description.csv
logs/: api
notebooks/: 02. Modelisation.ipynb  03. Database.ipynb
scripts/: api_test_no_ui.py  get_arborescence.py  mlflow_main.py  streamlit_cloud.py
src/dev/: modelisation.py
src/prod/: paths.py  utils.py  visualization.py
tests/: test_api.py  test_mlflow_api.py
