[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "p7-package"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "ovidiu.pascal", email = "ovidiu.pascal@orange.com" }
]
requires-python = ">=3.12,<3.13"

# --- Use an array of strings for dependencies ---
dependencies = [
    "lightgbm >=4.5.0,<5.0.0",
    "scikit-learn >=1.5.2,<2.0.0",
    "numpy >=1.22,<2.1",
    "imbalanced-learn >=0.12.4,<0.13.0",
    "mlflow >=2.18.0,<3.0.0",
    "optuna >=4.1.0,<5.0.0",
    "plotly >=5.24.1,<6.0.0",
    "hyperopt >=0.2.7,<0.3.0",
    "matplotlib >=3.9.3,<4.0.0",
    "ipywidgets >=8.1.5,<9.0.0",
    "torch >=2.5.1,<3.0.0",
    "torchvision >=0.20.1,<1.0.0",    # or <0.21 if it's a sub-1.0 series
    "torchaudio >=2.5.1,<3.0.0",
    "gputil >=1.4.0,<2.0.0",
    "h2o >=3.46.0.6,<4.0.0",
    "faiss-cpu >=1.9.0.post1,<2.0.0",
    "nvidia-ml-py3 >=7.352.0,<8.0.0",
    "psutil >=6.1.1,<7.0.0",
    "pyopencl >=2024.3,<2025.0",
    "llvmlite >=0.43.0,<1.0.0",
    "shap >=0.46.0,<1.0.0",
    "xgboost >=2.1.3,<3.0.0",
    "evidently >=0.5.1,<1.0.0",
    "seaborn (>=0.13.2,<0.14.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "sklearn-pandas (>=2.2.0,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]

[tool.poetry]
packages = [
    { include = "packages", from = "src" }
]

[tool.poetry.group.dev.dependencies]
deptry = "^0.22.0"

