[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "p7-package"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "ovidiu.pascal", email = "ovidiu.pascal@orange.com" }
]
requires-python = ">=3.12,<3.13"

# --- Use an array of strings for dependencies ---
dependencies = [
    "mlflow (>=2.19.0,<3.0.0)",
    "numpy (>=1.22.0,<2.1)",
    "pandas (>=2.2.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "pyopencl (>=2024.3,<2025.0)",
    "gputil (>=1.4.0,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "faiss-cpu (>=1.9.0.post1,<2.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "scikit-learn (>=1.0.1,<1.6.0)",
    "optuna (>=4.1.0,<5.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "evidently (>=0.5.1,<0.6.0)",
    "shap (>=0.46.0,<0.47.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",

]

[tool.poetry]
packages = [
    { include = "packages", from = "src" }
]

[tool.poetry.group.dev.dependencies]


